SERVER-50532 Cannot require that database exists when applying 'dropDatabase' oplog entry